2012-12-05  Gustavo Sverzut Barbieri (k-s)

	* Removed DirectFB support (both ecore_directfb, evas and ecore_evas).
	* Removed XRender, WinCE, X11-16 and X11-8 ecore_evas support.

2012-12-04  Gwanglim Lee

        * Add window profile support:
        * Add ecore_evas and ecore_x APIs to support the window profile.
        * Implement window profile for ecore_evas_x, ecore_evas_extn_socket,
          ecore_evas_extn_plug and ecore_evas_buffer.
        * Deprecate ECORE_X_ATOM_E_PROFILE and ECORE_X_ATOM_E_PROFILE_LIST.
        * Deprecate ecore_x_e_window_profile_list_set. Use
          ecore_x_e_window_available_profiles_set instead.
        * Deprecate ecore_x_e_window_profile_list_get. Use
          ecore_x_e_window_available_profiles_get instead.
        * Add ecore_evas_sub_ecore_evas_list_get API.

2012-12-05  Cedric Bail

	* Fix build of Ecore_Evas_Extn on Solaris 11.

2012-11-30 Gustavo Sverzut Barbieri (k-s)

	* Fix evas_object_box.c to properly reset size_hint_min to zero if
	there are no objects packed into the box.

2012-11-22 Paulo Alcantara (pcacjr)

	* Add scalecache support to Cserve2

2012-11-22  Sung W. Park (sung_)

        * Fixed a bug where if an image object rendered using Evas GL
        direct rendering and then another image object using Native
        Surface rendering, there was a potential for it to fall into
        the same direct rendering path.
        * Fixed some minor Evas GL extension bugs that came from refactoring.


2012-11-21  Carsten Haitzler (The Rasterman)

        * Fixed leak in textblock and text props in general that made
        textblock recalcs lead very badly. Required changed to textgrid
        though a sit relied on the leaky behavior.

2012-11-16  Sung W. Park (sung_)

        * Fixed glGetIntegerv() in Direct Rendering mode for Evas GL
        to properly handle GL_SCISSOR_BOX and GL_VIEWPORT parameters.


2012-11-13  Carsten Haitzler (The Rasterman)
